# catboys-api

./: .gitignore  pyproject.toml
catboys/app/: application.py
catboys/app/routes/: __init__.py  random.py
catboys/bot/: bot.py
catboys/bot/cogs/: submit.py
catboys/bot/utils/: bot.py  views.py
catboys/core/: settings.py
catboys/db/: __init__.py  dependency.py  models.py
